# hfb3

./: Makefile  Makefile.in  README.md
examples/: cli_example.sh  demo.ipynb
lib/: .gitignore
misc/data/: bokeh.example  test_2ct_256Fm.hfb3
misc/doxygen/: Doxyfile  main.md  mathjax_custom.js
misc/mathematica/: test_kinetic.wls
misc/maxima/: quadratures.max  sympyTests.py  tests.max
misc/modules/: modules.sh
misc/python/: .gitignore  Makefile  hfb3.i  pyproject.toml  setup.py  test_main.py  tox.ini
misc/releases/: gen_pip_private.sh  gen_pip_public.sh  gen_private.sh  gen_public.sh
misc/studies/benchmark_hfbtho/: 202Rn_deformed.hfb3  202Rn_deformed.hfb3.out  208Pb_spherical.hfb3  208Pb_spherical.hfb3.out  20O_spherical.hfb3  (+5 more)
misc/tests/: .clangd  .gitignore  Makefile  gtest-parallel  maxima_targets.h  maxima_targets2.h  test_action.cpp  test_axis.cpp  test_base64.cpp  test_basis.cpp  test_cliparser.cpp  test_constraint.cpp  test_datatree.cpp  test_discrete.cpp  test_field.cpp  test_field_ws.cpp  test_fieldkinetic.cpp  test_fieldspinorbit.cpp  test_fragments.cpp  test_geometry.cpp  test_global.cpp  test_gradientwalk.cpp  test_ioamedee.cpp  test_ioberger.cpp  test_iohfb3.cpp  test_iojson.cpp  test_iomsgp.cpp  test_mesh.cpp  test_meta.cpp  test_mixing.cpp  test_multi.cpp  test_multipole_operators.cpp  test_plot.cpp  test_qnumbers.cpp  test_solver_ws.cpp  test_solverhfb.cpp  test_state.cpp  test_system.cpp  test_tools.cpp  test_wspot.cpp  (+1 more)
src/: .clang-format  .clangd  .gitignore  Makefile  action.cpp  action.h  axis.cpp  axis.h  base64.cpp  base64.h  basis.cpp  basis.h  cliparser.cpp  cliparser.h  constraint.cpp  constraint.h  datatree.cpp  datatree.h  discrete.cpp  discrete.h  field.cpp  field.h  field_cdm2.cpp  field_cdm2.h  field_central.cpp  field_central.h  field_coulomb_exact.cpp  field_coulomb_exact.h  field_coulomb_slater.cpp  field_coulomb_slater.h  field_density.cpp  field_density.h  field_density_fr.cpp  field_density_fr.h  field_kinetic.cpp  field_kinetic.h  field_rearrangement.cpp  field_rearrangement.h  field_rearrangement_fr.cpp  field_rearrangement_fr.h  (+76 more)
(+77 files in other folders)
